--- a/montyHall.ipynb
+++ b/montyHall.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,30 +54,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3336180\n"
+      "0.332457\n"
      ]
     }
    ],
    "source": [
     "count =0\n",
-    "\n",
-    "for i in range(10000000):\n",
+    "#no.of trails M\n",
+    "M = 1000000\n",
+    "for i in range(M):\n",
     "    count=count+game()\n",
     "\n",
-    "print(count)\n",
+    "# probability of winning with retaining your first choice\n",
+    "print(count/M)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
